# baloto-colombia

./: .gitignore  pyproject.toml
src/baloto/: __version__.py  pydanitc_error.ipynb
src/baloto/baloto/: __main__.py  application.py
src/baloto/cleo/: cleo_application.py  decorator.py  helpers.py  utils.py
src/baloto/cleo/commands/: cleo_command.py  command.py  help_command.py  list_command.py
src/baloto/cleo/descriptors/: application_descriptor.py  descriptor.py  text_descriptor.py
src/baloto/cleo/events/: console_command_event.py  console_error_event.py  console_event.py  console_signal_event.py  console_terminate_event.py  event_dispatcher.py
src/baloto/cleo/exceptions/: __init__.py  errors.py  pretty_print.py
src/baloto/cleo/exceptions/pretty/: __init__.py  validation_error.py
src/baloto/cleo/formatters/: formatter.py  theme.py
src/baloto/cleo/io/: buffered_io.py  io.py  null_io.py  output.py  stream_io.py
src/baloto/cleo/io/inputs/: _annotated.py  argument.py  argv_input.py  base_model.py  definition.py  definition_input.py  input.py  option.py  stream_input.py  string_input.py
src/baloto/cleo/io/outputs/: buffered_output.py  console_output.py  null_output.py  output.py  section_output.py  stream_output.py
src/baloto/cleo/loaders/: command_loader.py  factory_command_loader.py
src/baloto/cleo/rich/: _tracebacks.py  console_factory.py  section_message.py  theme.py  traceback.py
src/baloto/cleo/rich/factory/: console_factory.py
src/baloto/cleo/rich/logger/: console_handler.py
src/baloto/cleo/rich/logging/: console_handler.py  log.py  log_render.py
src/baloto/cleo/testers/: __init__.py
src/baloto/cleo/ui/: __init__.py  question.py
src/baloto/core/: application.py  exceptions.py  poetry.py
src/baloto/core/cleo/: application.py  utils.py
src/baloto/core/cleo/commands/: command.py  completions_command.py  help_command.py  list_command.py
src/baloto/core/cleo/descriptors/: application_descriptor.py  descriptor.py  text_descriptor.py
src/baloto/core/cleo/exceptions/: __init__.py
src/baloto/core/cleo/formatters/: formatter.py
src/baloto/core/cleo/io/: buffered_io.py  io.py
src/baloto/core/cleo/loaders/: command_loader.py
src/baloto/core/cleo/testers/: application_tester.py  command_tester.py
src/baloto/core/commands/: about.py  command.py
src/baloto/core/config/: __init__.py  config.py  config_source.py  dict_config_source.py  hookspecs.py  host.py  settings.py  stash.py
src/baloto/core/config/poetry/: __init__.py
src/baloto/core/loaders/: command_loader.py
src/baloto/core/patterns/: builder.py
src/baloto/core/poetry/: exceptions.py  file.py  locker.py  poetry.py  toml.py
src/baloto/core/rich/: __init__.py  _tracebacks.py  console_factory.py  section_message.py  theme.py  tracebacks.py
src/baloto/core/rich/builders/: console_builder.py  director.py
src/baloto/core/rich/formatters/: __init__.py  highlighter.py  lib.py  theme.py  traceback_formatter.py
src/baloto/core/rich/logging/: console_handler.py  console_logger.py  lib.py  log.py  log_render.py
src/baloto/core/rich/testers/: __init__.py  messages.py
src/baloto/core/rich/tracebacks/: __init__.py
src/baloto/core/richer/: __init__.py  console_factory.py  section_message.py  settings.py  stash.py
src/baloto/core/richer/config/: config.py
src/baloto/core/utils/: __init__.py  compat.py  console_message.py  helpers.py  multiple_dispatch.py
src/baloto/miloto/: __main__.py  application.py  miloto.py
src/baloto/miloto/config/: __init__.py  config.py
src/baloto/miloto/console/: console_message.py
src/baloto/miloto/exceptions/: __init__.py  console_message.py  errors.py
src/baloto/testers/: __init__.py  messages.py
src/baloto/utils/: __init__.py  annotation_types.py  types.py  validators.py
static/styles/: baloto.ini  miloto.ini
templates/: template.py
tests/: __init__.py  alphabets.py  assert_report.py  assertion_error_report.py  conftest.py  difflib_diff_temp.py  eerrr.py  helpers.py  tests_stam.py  utils.py
tests/cleo/: tests_argv_input.py
tests/cleo/allure-results/: 3b3005ef-c851-406b-ad46-ad6fc421909b-result.json  7abcea69-a01a-4dca-9eb0-f7b56b58b2b1-container.json
tests/cleo/commands/: tests_command.py
tests/cleo/console/: test_exceptions_console_message.py  tests_console_messages.py  tests_exceptions_console_message.py  tests_exceptions_poetry_runtime_error.py
tests/cleo/exceptions/: test_errors.py
tests/cleo/formatters/: conftest.py  test_formatter.py
tests/cleo/io/: conftest.py  test_argument.py  test_option.py  tests_argument.py  tests_argv_input.py  tests_option.py  tests_section_output.py
tests/cleo/loaders/: tests_factory_command_loader.py
tests/cleo/ui/: conftest.py  tests_question.py
tests/cleo_tests/exceptions/: test_errors.py  tests_exceptions.py
tests/cleo_tests/formatters/: __init__.py  test_formatter.py  tests_textwrap.py
tests/cleo_tests/io/: conftest.py  test_argument.py
tests/cleo_tests/loaders/: test_factory_command_loader.py
tests/cleo_tests/ui/: __init__.py  conftest.py  tests_question.py
tests/frameworks_tests/: tests_textwrap.py
tests/miloto/: __init__.py
tests/miloto/console/: tests_console_message.py
tests/miloto_tests/: tests_pluggy.py
tests/plugins/: __init__.py  bootstrap.py  logging.py  testmode_plugin.py  tracebacks.py
tests/plugins/logger/: __init__.py  logger_plugin.py  plugin.py
tests/plugins/pytest_richtrace/: __init__.py  collection_observer.py  environment.py  error_observer.py  hookspecs.py  models.py  plugin.py  rich_reporter.py  test_execution_observer.py
tests/plugins/pytest_richtrace/services/: __init__.py  collector_services.py
tests/plugins/tracker/: __init__.py  assert_report.py  collection_plugin.py  console.py  error_upcoming.py  header.py  models.py  reporter.py  reporter_plugin.py  text_execution_plugin.py  tracker.py  tracker_plugin.py
tests/rich/: conftest.py
tests/rich/console/: tests_console.py
tests/rich/factory/: tests_console_factory.py
tests/rich/terminals/: __init__.py  test_terminal.py
tests/rich_tests/: tests_messages.py
(+36 files in other folders)
