[project]
name = "baloto"
version = "2.1.1"
description = "Applicacion para calcular datos estadisticos en los juegos Miloto y Baloto"
authors = [
    {name = "Dani Vainstein",email = "solmarkn@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["cli", "commands", "miloto", "baloto"]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pendulum (>=3.1.0,<4.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "cleo (>=2.1.0,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "glom (>=24.11.0,<25.0.0)",
    "pydantic-extra-types (>=2.10.4,<3.0.0)",
]

[project.urls]
Repository = "https://github.com/daniv/baloto-colombia.git"

[tool.poetry]
requires-poetry = ">=2.1"
packages = [{include = "baloto", from = "src"}]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
]

[tool.poetry.scripts]
miloto = 'baloto.miloto.__main__:main'

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.1"
hypothesis = "^6.132.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["*_test", "test_*"]
# norecursedirs = [".idea", ".pytest_cache"]
enable_assertion_pass_hook = true
console_output_style = "count"
log_cli_level = "DEBUG"
addopts = [
    "-p no:logging", "-ra"
]
xfail_strict = true

[tool.black]
line-length = 120
verbose = true

[tool.mypy]
files = "src, tests"
mypy_path = "src"
show_error_codes = true
strict = true
namespace_packages = true
explicit_package_bases = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
    "tests/fixtures",
    "tests/masonry/builders/fixtures",
    "tests/utils/fixtures",
]

[tool.miloto]
description = """
MiLoto es una mecánica creada por Baloto para aquellos que se la juegan por cumplir sus sueños,
donde por solo $4.000 podrán ganar un acumulado desde $120 millones
Elige tus 5 números de la suerte del 1 al 39
"""
min_number = 1
max_number = 39
